<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Newz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Notification Format -->
    <!--<string name="format_notification">Title: <xliff:g id="condition">%1$s</xliff:g> Section: <xliff:g id="high">%2$s</xliff:g> Abstract: <xliff:g id="low">%3$s</xliff:g></string>-->

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Newz Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_newz_key">newztype</string>
    <string name="pref_newz_default">mostshared</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Preview</string>
    <string name="content_authority">perez.marcos.com.newz</string>
    <string name="sync_account_type">com.perez.marcos</string>
    <string name="action_share">Share</string>


    <string name="pref_newz_label_emailed">Most emailed</string>
    <string name="pref_newz_label_shared">Most shared</string>
    <string name="pref_newz_label_viewed">Most viewed</string>

    <string name="pref_newz_value_emailed">mostemailed</string>
    <string name="pref_newz_value_shared">mostshared</string>
    <string name="pref_newz_value_viewed">mostviewed</string>

    <string name="pref_category_label">Filter by:</string>
    <string name="pref_section_label">Section</string>

    <string name = "pref_days_label_1">1</string>
    <string name = "pref_days_label_7">7</string>
    <string name = "pref_days_label_30">30</string>
    <string name = "pref_days_value_1">1</string>
    <string name = "pref_days_value_7">7</string>
    <string name = "pref_days_value_30">30</string>
    <string name="pref_days_default">30</string>

    <string name="pref_days_key">days</string>
    <string name="pref_days_label">Days:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="open_in_web">Continue in web</string>

</resources>
