<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_category_label"
        android:key="@string/pref_newz_key"
        android:defaultValue="@string/pref_newz_default"
        android:entryValues="@array/pref_newz_values"
        android:entries="@array/pref_newz_options">
    </ListPreference>

    <ListPreference
        android:title="@string/pref_days_label"
        android:key="@string/pref_days_key"
        android:defaultValue="@string/pref_days_default"
        android:entryValues="@array/pref_days_values"
        android:entries="@array/pref_days_options">
    </ListPreference>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />



</PreferenceScreen>
